force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>hed__Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</description>
    <inlineHelpText>Indique que ce module doit être exécuté de manière asynchrone dans cette transaction pour l&apos;un de ses événements postérieurs.</inlineHelpText>
    <label>Asynchronous</label>
    <type>Checkbox</type>
</CustomField>