force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Class__c.field-meta.xml
<CustomField>
    <fullName>hed__Class__c</fullName>
    <description>The name of the class to run.</description>
    <inlineHelpText>Le nom de la classe à dispenser.</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>