force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>hed__Filter_Value__c</fullName>
    <description>The value of the field used for filtering.</description>
    <inlineHelpText>La valeur du champ utilisé pour le filtrage.</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>