force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Load_Order__c.field-meta.xml
<CustomField>
    <fullName>hed__Load_Order__c</fullName>
    <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
    <inlineHelpText>L&apos;ordre dans lequel ce module doit être exécuté. L’ordre est en relation avec d&apos;autres déclencheurs sur le même objet avec les mêmes actions de déclencheur, par exemple, tous les déclencheurs « avant insertion » sur le compte.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>