force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Owned_by_Namespace__c.field-meta.xml
<CustomField>
    <fullName>hed__Owned_by_Namespace__c</fullName>
    <description>The namespace of the package or Org that will control this Trigger handler.</description>
    <inlineHelpText>L&apos;espace de noms du package ou de l&apos;organisation qui contrôle ce gestionnaire de déclencheur.</inlineHelpText>
    <label>Owned by Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>