force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__User_Managed__c.field-meta.xml
<CustomField>
    <fullName>hed__User_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, we no longer push updates to this Trigger Handler. Select this option if you&apos;ve made changes that you don&apos;t want us to overwrite.</description>
    <inlineHelpText>Lorsque cette option est sélectionnée, nous ne transmettons plus les mises à jour à ce gestionnaire de déclencheur. Sélectionnez cette option si vous ne souhaitez pas que les modifications que vous avez apportées soient remplacées.</inlineHelpText>
    <label>User Managed</label>
    <type>Checkbox</type>
</CustomField>