force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Usernames_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>hed__Usernames_to_Exclude__c</fullName>
    <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</description>
    <inlineHelpText>Liste de noms d&apos;utilisateur Salesforce, séparés par un point virgule, pour lesquels ce déclencheur ne sera pas exécuté. Si vous souhaitez l&apos;exécuter pour tous les utilisateurs, laissez vide.</inlineHelpText>
    <label>Usernames to Exclude</label>
    <type>TextArea</type>
</CustomField>